--- a/graphics/ruby-rcairo/Makefile
+++ b/graphics/ruby-rcairo/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.1.1.1 2006/07/23 16:57:25 minskim Exp $
+# $NetBSD: Makefile,v 1.2 2007/05/26 14:13:42 obache Exp $
 #
 
-DISTNAME=		rcairo-1.2.0
+DISTNAME=		rcairo-1.4.1
 PKGNAME=		${RUBY_PKGPREFIX}-${DISTNAME}
 CATEGORIES=		graphics
 MASTER_SITES=		http://cairographics.org/releases/
@@ -15,7 +15,7 @@ BUILDLINK_API_DEPENDS.cairo+=	cairo>=1.2.0
 USE_TOOLS+=		pkg-config
 
 RUBY_HAS_ARCHLIB=	YES
-USE_RUBY_SETUP=		YES
+USE_RUBY_EXTCONF=	YES
 
 .include "../../lang/ruby/modules.mk"
 .include "../../graphics/cairo/buildlink3.mk"
