--- a/www/Makefile
+++ b/www/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.510 2007/05/26 01:48:23 minskim Exp $
+# $NetBSD: Makefile,v 1.511 2007/05/27 02:59:35 obache Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -156,6 +156,7 @@ SUBDIR+=	lynx
 SUBDIR+=	mMosaic
 SUBDIR+=	make_album
 SUBDIR+=	micro_httpd
+SUBDIR+=	mimetex
 SUBDIR+=	mini_httpd
 SUBDIR+=	mknmz-wwwoffle
 SUBDIR+=	mongrel
