--- a/devel/p5-Module-Pluggable/Makefile
+++ b/devel/p5-Module-Pluggable/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2006/12/08 14:58:15 obache Exp $
+# $NetBSD: Makefile,v 1.7 2007/05/27 09:16:28 heinz Exp $
 #
 
-DISTNAME=	Module-Pluggable-3.4
+DISTNAME=	Module-Pluggable-3.6
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5mpl
 CATEGORIES=	devel perl5
@@ -11,8 +11,10 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://search.cpan.org/dist/Module-Pluggable/
 COMMENT=	Perl 5 module for automatically adding the ability to have plugins to modules
 
-USE_LANGUAGES=	# empty
-PERL5_PACKLIST=	auto/Module/Pluggable/.packlist
+PKG_DESTDIR_SUPPORT=	user-destdir
+
+USE_LANGUAGES=		# empty
+PERL5_PACKLIST=		auto/Module/Pluggable/.packlist
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
