--- a/print/Makefile
+++ b/print/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.171 2007/05/27 02:01:14 obache Exp $
+# $NetBSD: Makefile,v 1.172 2007/05/28 14:09:15 jmmv Exp $
 #
 
 COMMENT=	Desktop publishing
@@ -109,6 +109,7 @@ SUBDIR+=	teTeX3-texmf
 SUBDIR+=	teTeX3-texmfsrc
 SUBDIR+=	tex-IEEEtran
 SUBDIR+=	tex-abc
+SUBDIR+=	tex-algorithm2e
 SUBDIR+=	tex-bagpipetex
 SUBDIR+=	tex-chemarrow
 SUBDIR+=	tex-dhucs
