--- a/archivers/lcab/Makefile
+++ b/archivers/lcab/Makefile
@@ -1,12 +1,12 @@
-# $NetBSD: Makefile,v 1.5 2006/10/04 20:45:46 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2007/05/28 21:23:47 wiz Exp $
 #
 
 DISTNAME=		lcab-1.0b10
 CATEGORIES=		archivers
-MASTER_SITES=		http://www.geekshop.be/rien/lcab/files/
+MASTER_SITES=		http://coding.wooyayhoopla.be/lcab/sources/
 
 MAINTAINER=		plunky@rya-online.net
-HOMEPAGE=		http://www.geekshop.be/rien/lcab/
+HOMEPAGE=		http://coding.wooyayhoopla.be/lcab/
 COMMENT=		Microsoft cabinet (.CAB) file creator
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
